--- a/client/src/assets/css/App.css
+++ b/client/src/assets/css/App.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 body {
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 option {
@@ -17,9 +17,13 @@ option {
   position: relative;
   padding-right: 16px;
   transition: all 0.5s;
+  border-radius: 50px 0 0 50px;
+}
+.sidebar-link:hover {
+  background: skyblue;
 }
 .active-sidebar-link {
-  border-radius: 50px 0 0 50px;
+  /* border-radius: 50px 0 0 50px; */
   background: var(--primary-bg);
   color: var(--primary);
   padding-right: 0px;
