--- a/client/src/assets/css/MiniCalendar.css
+++ b/client/src/assets/css/MiniCalendar.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"); */
 /* LIGHT MODE + GENERAL */
 
-.react-calendar {
+/* .react-calendar {
   border: unset;
   background-color: transparent;
   font-family: "DM Sans", sans-serif;
@@ -99,10 +99,10 @@ abbr[title] {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   color: white;
-}
+} */
 
 /* DARK MODE */
-
+/* 
 body.chakra-ui-dark .react-calendar {
   border-radius: 30px;
 }
@@ -154,4 +154,4 @@ body.chakra-ui-dark .react-calendar__tile--rangeEnd:enabled:hover,
 body.chakra-ui-dark .react-calendar__tile--rangeEnd:enabled:focus {
   background: #7551ff;
   color: white;
-}
+} */
